fix:overflow

--- a/cssBayan/styles/style.css
+++ b/cssBayan/styles/style.css
@@ -3,7 +3,7 @@ body{
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    overflow: ;
+    overflow: hidden;
 }
 header{
     text-align: center;
